...
                        modifier = Modifier
                            .fillMaxSize()
                            .padding(16.dp),
                        contentAlignment = Alignment.Center
                    ) {
                        Text(
                            text = "Średnia skuteczność danego dnia",
                            textAlign = TextAlign.Center,
                            fontSize = 18.sp) }
                    if (allBarValues.isNotEmpty()) {
                        CustomChart(allBarValues, xAxisLabelsGrouped, 100)
                        Spacer(modifier = Modifier.height(16.dp)) } }
                Column(
...
